chore: make id of documents autogenerated